# simpleengine

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  vcpkg-configuration.json  vcpkg.json
assets/models/sponza/: LICENSE.md  sponza.gltf
assets/shaders/: basic.frag  basic.vert  model.frag  model.vert
cmake/: copy_assets_command.cmake
src/assets/: Asset.h  AssetHandle.cpp  AssetHandle.h  AssetManager.cpp  AssetManager.h  Material.h  Model.cpp  Model.h  Shader.h  Texture.cpp  Texture.h  UUID.h
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  Event.h  EventBus.h  Input.cpp  Input.h  MemoryUtils.h  Timer.h  Window.cpp  Window.h
src/rendering/: Frustum.h  GlBuffer.cpp  GlBuffer.h  GlUtils.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/scene/: Camera.cpp  Camera.h  Light.h  Player.cpp  Player.h  Renderable.h  Scene.cpp  Scene.h  Sky.h  Sun.cpp  Sun.h  Transform.h
